[FIX] kanban: dashboard force hscroll: no flex row wrap

--- a/anytracker/static/src/css/anytracker.css
+++ b/anytracker/static/src/css/anytracker.css
@@ -4,6 +4,13 @@
 .openerp .oe_form_sheet_width {
     max-width: 960px;
 }
+/* force hscroll of kanban dashboard: flex-flow row wrap off */
+.o_kanban_view.o_kanban_dashboard {
+    -ms-flex-flow: row nowrap;
+    -moz-flex-flow: row nowrap;
+    -webkit-flex-flow: row nowrap;
+    flex-flow: row nowrap;
+}
 .oe_kanban_project {
     min-height: 0px !important;
 }
